src/index.css
@import url("./common.css");

:root {
  --app-padding: var(--wa-space-xl);
  --app-spacing: var(--wa-space-l);

  @media (max-width: 40rem) {
    --app-padding: var(--wa-space-l);
    --app-spacing: var(--wa-space-m);
  }
}

header,
section,
footer {
  padding: var(--app-padding);
}

header {
  position: sticky;
  top: 0;
  z-index: 1;
  background-color: var(--wa-color-brand-90);

  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
  gap: var(--app-spacing);

  .logo {
    height: calc(
      /* h1 + subtitle */
      (var(--wa-font-size-xl) * var(--wa-line-height-condensed)) +
      (var(--wa-font-size-m) * var(--wa-line-height-normal))
    );
    width: auto;
    object-fit: contain;
  }

  .title {
    display: flex;
    flex-direction: column;
  }

  h1 {
    font-size: var(--wa-font-size-xl);
    line-height: var(--wa-line-height-condensed);

    /* Allow subtitle to slide behind h1 in scroll animation */
    background-color: var(--wa-color-brand-fill-normal);
    z-index: 2;
  }
  .subtitle {
    font-size: var(--wa-font-size-m);
    font-weight: var(--wa-font-weight-normal);
    color: var(--wa-color-text-quiet);
  }
}

section {
  max-width: 55ch;
}

#xrefs {
  /* Format dl as table */
  --row-gap: var(--wa-space-l);
  --col-gap: var(--wa-space-xl);
  --border-color: var(--wa-color-brand-border-quiet);

  p {
    margin: 0;
  }

  dl {
    display: grid;
    grid-template-columns: auto 1fr;
    border-block-end: 1px solid var(--border-color);
  }
  dt,
  dd {
    margin: 0;
    padding: calc(var(--row-gap) / 2) 0;
    border-block-start: 1px solid var(--border-color);
  }
  dt {
    grid-column: 1;
  }
  dd {
    grid-column: 2;
    padding-inline-start: var(--col-gap);
  }
  dd + dd {
    margin-block-start: calc(-1 * var(--row-gap) / 2);
    padding-block-start: 0;
    border-block-start: none;
  }
  dt:first-of-type,
  dd:first-of-type {
    font-weight: var(--wa-font-weight-semibold);
  }
}

/*
 * Shrink header on scroll.
 * Where animation-timeline not supported, apply a paused 1000ms animation
 * that will be manually advanced in JS.
 */

@property --scroll-range-end {
  /* Have getComputedStyle return px for this property */
  syntax: "<length>";
  inherits: true;
  initial-value: 0;
}

header {
  --scroll-range-end: calc(3.5em + var(--app-padding));
  --scroll-animation-options: 1000ms linear forwards paused;
}

@supports (animation-timeline: scroll()) {
  header {
    --scroll-animation-options: linear forwards;
  }
}

header {
  animation: scroll-header var(--scroll-animation-options);
  animation-timeline: scroll();
  animation-range: 0 var(--scroll-range-end);

  .logo {
    animation: scroll-logo var(--scroll-animation-options);
    animation-timeline: scroll();
    animation-range: 0 var(--scroll-range-end);
  }

  h1 {
    animation: scroll-h1 var(--scroll-animation-options);
    animation-timeline: scroll();
    animation-range: 0 var(--scroll-range-end);
  }

  .subtitle {
    animation: scroll-subtitle var(--scroll-animation-options);
    animation-timeline: scroll();
    animation-range: 0 var(--scroll-range-end);
  }
}

@keyframes scroll-header {
  from {
    padding-block: var(--app-padding);
    box-shadow: none;
  }
  to {
    padding-block: var(--app-spacing);
    box-shadow: var(--wa-shadow-l);
  }
}

@keyframes scroll-logo {
  from {
    height: calc(
      /* h1 + subtitle */
      (var(--wa-font-size-xl) * var(--wa-line-height-condensed)) +
      (var(--wa-font-size-m) * var(--wa-line-height-normal))
    );
  }
  to {
    height: calc(var(--wa-font-size-l) * var(--wa-line-height-condensed));
  }
}

@keyframes scroll-h1 {
  from {
    font-size: var(--wa-font-size-xl);
  }
  to {
    font-size: var(--wa-font-size-l);
  }
}

@keyframes scroll-subtitle {
  from {
    opacity: 1;
    transform: translateY(0);
    margin-block-end: 0;
  }
  to {
    opacity: 0;
    transform: translateY(-100%);
    margin-block-end: calc(-1 * var(--wa-font-size-m) * var(--wa-line-height-normal));
  }
}

